--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,9 @@
-<div class="container-fluid bg-secondary">
-    <p>home works!</p>
+<div class="container-fluid">
+
+    <div class="container-fluid bg-color m-2">
+        <div class="btn btn-outline-light">Test</div>
+    </div>
+
 </div>
+
+
