--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,41 @@
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(assets/Poppins.woff2) format('woff2');
+    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+  }
+  
+  /* latin-ext */
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(assets/Poppins.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(assets/Poppins.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 :root {
     --corp-color-one: #6d30f3;
     --corp-color-one-hover: #6e30f365;
     --corp-color-two: #4434ac;
     --corp-color-three: #a37af3;
     --transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+*, html, body {
+    font-family: 'Poppins', sans-serif;
 }
 
 .bg-color {
@@ -20,8 +52,19 @@
 
 .btn-outline-color {
     border: 1px solid var(--corp-color-one) !important;
+    color: var(--corp-color-one) !important;
 }
 
 .btn-outline-color:hover {
     background-color: var(--corp-color-one) !important;
+    color: white !important;
+}
+
+.text-color {
+    color: var(--corp-color-one);
+}
+
+.btn-check:focus+.btn, .btn:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem var(--corp-color-one-hover) !important;
 }
