Creando estructura basica

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,25 @@
-<div class="container-fluid">
+<div class="container-fluid bd-masthead">
+    <div class="row bg-color pt-1"></div>
 
-    <div class="container-fluid bg-color m-2">
-        <div class="btn btn-outline-light">Test</div>
+    <div class="row text-center mt-5 ">
+        <div class="col-lg">
+            <img src="../../assets/insinia.png" class="img-fluid home-logo">
+        </div>
+    </div>
+
+    <div class="row mt-5">
+        <div class="col">
+            <hr class="line">
+        </div>
+        <div class="col-auto text-center">
+            <h5 class="text-color">¡Bienvenido!</h5>
+            <button class="btn btn-sm btn-outline-color rounded-circle py-1 mt-2">
+                <i class="bi bi-caret-down-fill"></i>
+            </button>
+        </div>
+        <div class="col">
+            <hr class="line">
+        </div>
     </div>
 
 </div>
