--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,25 @@
+@keyframes pulse-color {
+    0% {
+      box-shadow: 0 0 0 0 var(--corp-color-one);
+    }
+    
+    70% {
+      box-shadow: 0 0 0 10px rgba(255, 121, 63, 0);
+    }
+    
+    100% {
+      box-shadow: 0 0 0 0 rgba(255, 121, 63, 0);
+    }
+}
+
+.pulse {
+    animation: pulse-color 3s infinite !important;
+}
+
+.pulse:focus {
+    box-shadow: 0 0 0 0.25rem transparent !important;
+}
+
 .blank-container-one {
     height: 100vh;
 }
@@ -7,12 +29,16 @@
     transition: 1s;
 }
 
+.head-container {
+    height: 870px;
+}
+
 .bd-masthead {
-    background: linear-gradient(165deg, var(--corp-color-one-hover) 10%, #fff 50%);
+    background: linear-gradient(190deg, var(--corp-color-one-hover) 15%, #fff 50%);
 }
 
 hr.line {
-    border-top: 4px solid var(--corp-color-one);
+    border-top: 3px solid var(--corp-color-one);
     margin: 0.75rem;
 }
 
