--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,26 @@
 <div class="container-fluid bd-masthead">
+
     <div class="row bg-color pt-1"></div>
 
-    <div class="row text-center mt-5 ">
+    <div class="row text-center mt-5">
         <div class="col-lg">
-            <img src="../../assets/insinia.png" class="img-fluid home-logo">
+            <img src="../../assets/insinia-shadow.png" class="img-fluid home-logo">
         </div>
     </div>
 
     <div class="row mt-5">
-        <div class="col">
+        <div class="col g-0">
             <hr class="line">
         </div>
+
         <div class="col-auto text-center">
             <h5 class="text-color">¡Bienvenido!</h5>
-            <button class="btn btn-sm btn-outline-color rounded-circle py-1 mt-2">
+            <button class="btn btn-sm btn-color text-light rounded-circle pulse py-1 mt-2">
                 <i class="bi bi-caret-down-fill"></i>
             </button>
         </div>
-        <div class="col">
+
+        <div class="col g-0">
             <hr class="line">
         </div>
     </div>
