--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 
     <div class="row text-center mt-5">
         <div class="col-lg">
-            <img src="../../assets/insinia-shadow.png" class="img-fluid home-logo">
+            <img src="../../assets/insinia-shadow.png" class="img-fluid home-logo float">
         </div>
     </div>
 
@@ -14,17 +14,111 @@
         </div>
 
         <div class="col-auto text-center">
-            <h5 class="text-color">¡Bienvenido!</h5>
-            <button class="btn btn-sm btn-color text-light rounded-circle pulse py-1 mt-2">
+            <h5 class="text-color fw-bolder">¡Bienvenido!</h5>
+            <a href="/home#getStarted" class="btn btn-sm btn-color text-light rounded-circle pulse py-1 mt-2">
                 <i class="bi bi-caret-down-fill"></i>
-            </button>
+            </a>
         </div>
-
+        
         <div class="col g-0">
             <hr class="line">
         </div>
     </div>
 
+    <div class="container-blank g-0 bg-color-home-inverted rounded"></div>
+
+    <div class="row justify-content-center mb-5" id="getStarted">
+
+        <div class="row text-center text-color">
+            <h3 class="fw-lighter mt-3">¡Empezamos! <div class="btn btn-sm btn-color text-light rounded-circle pulse py-1 my-2"><i class="bi bi-caret-right-fill" routerLink="/register"></i></div></h3>
+        </div>
+
+        <div class="col-6 col-lg-6 bg-color rounded text-light text-center">
+            <div class="row justify-content-center text-center mt-3">
+                <div class="col">
+                    <h3><i class="bi bi-person-square link-white-to-color"></i></h3>
+                </div>
+                <div class="col-2">
+                    <h3><i class="bi bi-star-fill link-white-to-color"></i></h3>
+                </div>
+                <div class="col">
+                    <h3><i class="bi bi-list-stars link-white-to-color"></i></h3>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col g-0">
+                    <hr class="line border-light">
+                </div>
+            </div>
+
+            <div class="row mt-2 text-light">
+                <h5>
+                    Puedes crear una cuenta o<br>
+                    iniciar sesión si ya tienes una.
+                </h5>
+            </div>
+            <div class="row position-relative mt-5">
+                <div>
+                    <button class="position-absolute top-100 start-25 translate-middle bg-light btn btn-outline-color-alt shadow" routerLink="/login">¡Iniciar sesión!</button>
+                </div>
+                <div>
+                    <button class="position-absolute top-100 start-75 translate-middle bg-light btn btn-outline-color-alt shadow" routerLink="/register">¡Registrate!</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="container-fluid bg-color-home-0 rounded">
+        <div class="row text-center py-3">
+            <h3 class="text-light"><i class="bi bi-award"></i> Características</h3>
+        </div>
+
+        <div class="row justify-content-center text-light mb-5 gap-3">
+            
+            <div class="col-lg my-2 bg-color position-relative text-center rounded">
+                <div class="row">
+                    <div class="col">
+                        <img src="../../assets/stats.png" class="text-center img-fluid img-sections">
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle shadow">
+                        <h6 class="pt-2">Muestreo de datos</h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg my-2 bg-color position-relative text-center rounded">
+                <div class="row">
+                    <div class="col">
+                        <img src="../../assets/users.png" class="text-center img-fluid img-sections">
+                    </div>
+                </div>
+                <div class="row my-2 mt-4">
+                    <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle shadow">
+                        <h6 class="pt-2">Uso para múltiples usuarios</h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg my-2 bg-color position-relative text-center rounded">
+                <div class="row">
+                    <div class="col">
+                        <img src="../../assets/gear.png" class="text-center img-fluid img-sections">
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle shadow">
+                        <h6 class="pt-2">Totalmente configurable</h6>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </div>
+
 
 
