--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,34 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@keyframes pulse-color {
+    0% {
+      box-shadow: 0 0 0 0 var(--corp-color-one);
+    }
+    
+    70% {
+      box-shadow: 0 0 0 10px rgba(255, 121, 63, 0);
+    }
+    
+    100% {
+      box-shadow: 0 0 0 0 rgba(255, 121, 63, 0);
+    }
+}
+
+@keyframes float {
+	0% {
+		transform: translateY(0px);
+	}
+
+	50% {
+		transform: translateY(-10px);
+	}
+
+	100% {
+		transform: translateY(0px);
+	}
+}
+
 :root {
     --corp-color-one: #6d30f3;
     --corp-color-one-hover: #6e30f365;
