Añadiendo clases y cambiando @keyframes

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,29 +1,3 @@
-@keyframes pulse-color {
-    0% {
-      box-shadow: 0 0 0 0 var(--corp-color-one);
-    }
-    
-    70% {
-      box-shadow: 0 0 0 10px rgba(255, 121, 63, 0);
-    }
-    
-    100% {
-      box-shadow: 0 0 0 0 rgba(255, 121, 63, 0);
-    }
-}
-
-@keyframes float {
-	0% {
-		transform: translateY(0px);
-	}
-	50% {
-		transform: translateY(-10px);
-	}
-	100% {
-		transform: translateY(0px);
-	}
-}
-
 .bg-color-home-0 {
     background: rgb(109,48,243);
     background: linear-gradient(180deg, rgba(109,48,243,1) 0%, rgba(0,0,0,0) 100%);
@@ -75,6 +49,10 @@
     height: 28.4vh;
 }
 
+.item-section-home {
+    width: 300px;
+}
+
 .container-custom-home-one {
     height: 20vh;
 }
@@ -84,12 +62,12 @@
 }
 
 .bd-masthead {
-    background: linear-gradient(190deg, var(--corp-color-one-hover) 15%, #fff 50%);
+    background: linear-gradient(200deg, var(--corp-color-one-hover) 15%, #fff 50%);
 }
 
 hr.line {
     border-top: 3px solid var(--corp-color-one);
-    margin: 0.75rem;
+    margin: 1.5rem;
 }
 
 @media only screen and (max-width: 1920px) {
