--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,38 +2,35 @@
 
     <div class="row bg-color pt-1"></div>
 
-    <div class="row text-center mt-5">
-        <div class="col-lg">
-            <img src="../../assets/insinia-shadow.png" class="img-fluid home-logo float">
+    <div class="row mt-5 justify-content-center gap-1">
+        <div class="col-8 rounded">
+            <div class="col-auto p-0">
+                <h4 class="text-color fw-bolder pt-2">Bienvenido a Insinia</h4>
+                <h5 class="text-color">La herramienta definitiva para crear, organizar y manejar rankings.</h5>
+                <h5 class="text-color">Diseñada tanto uso profesional, casual y educativo.</h5>
+                <h5 class="text-color"></h5>
+                <div class="row">
+                    <div class="col-auto">
+                        <button class="btn btn-lg btn-color text-light fw-bolder" routerLink="/register">¿Comenzamos?</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="col-lg text-center">
+                <img src="../../assets/insinia-shadow.png" class="img-fluid home-logo float">
+            </div>
         </div>
     </div>
 
-    <div class="row mt-5">
-        <div class="col g-0">
-            <hr class="line">
+    <div class="row justify-content-center my-5" id="getStarted">
+
+        <div class="col-3 text-start">
+            <img src="../../assets/list-template-one.png" class="img-fluid float">
         </div>
 
-        <div class="col-auto text-center">
-            <h5 class="text-color fw-bolder">¡Bienvenido!</h5>
-            <a href="/home#getStarted" class="btn btn-sm btn-color text-light rounded-circle pulse py-1 mt-2">
-                <i class="bi bi-caret-down-fill"></i>
-            </a>
-        </div>
-        
-        <div class="col g-0">
-            <hr class="line">
-        </div>
-    </div>
-
-    <div class="container-blank g-0 bg-color-home-inverted rounded"></div>
-
-    <div class="row justify-content-center mb-5" id="getStarted">
-
-        <div class="row text-center text-color">
-            <h3 class="fw-lighter mt-3">¡Empezamos! <div class="btn btn-sm btn-color text-light rounded-circle pulse py-1 my-2"><i class="bi bi-caret-right-fill" routerLink="/register"></i></div></h3>
-        </div>
-
-        <div class="col-6 col-lg-6 bg-color rounded text-light text-center">
+        <div class="col-8 col-lg-8 bg-color rounded text-light text-center">
+            <div class="row"><h3 class="fw-lighter mt-3">¡Empezamos!</h3></div>
             <div class="row justify-content-center text-center mt-3">
                 <div class="col">
                     <h3><i class="bi bi-person-square link-white-to-color"></i></h3>
@@ -47,17 +44,17 @@
             </div>
 
             <div class="row">
-                <div class="col g-0">
+                <div class="col">
                     <hr class="line border-light">
                 </div>
             </div>
 
             <div class="row mt-2 text-light">
-                <h5>
-                    Puedes crear una cuenta o<br>
-                    iniciar sesión si ya tienes una.
+                <h5 class="px-2">
+                    Puedes crear una cuenta o iniciar sesión si ya tienes una.
                 </h5>
             </div>
+
             <div class="row position-relative mt-5">
                 <div>
                     <button class="position-absolute top-100 start-25 translate-middle bg-light btn btn-outline-color-alt shadow" routerLink="/login">¡Iniciar sesión!</button>
@@ -66,6 +63,7 @@
                     <button class="position-absolute top-100 start-75 translate-middle bg-light btn btn-outline-color-alt shadow" routerLink="/register">¡Registrate!</button>
                 </div>
             </div>
+            
         </div>
     </div>
     
@@ -74,7 +72,11 @@
             <h3 class="text-light"><i class="bi bi-award"></i> Características</h3>
         </div>
 
-        <div class="row justify-content-center text-light mb-5 gap-3">
+        <div class="row text-center py-3">
+            <h5 class="text-light">Totalmente eficiente, diseñada para la intuitividad y pensada para el ambito escolar.</h5>
+        </div>
+
+        <div class="row justify-content-center text-light m-2 gap-3">
             
             <div class="col-lg my-2 bg-color position-relative text-center rounded">
                 <div class="row">
@@ -83,7 +85,7 @@
                     </div>
                 </div>
                 <div class="row mt-4">
-                    <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle shadow">
+                    <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle item-section-home shadow">
                         <h6 class="pt-2">Muestreo de datos</h6>
                     </div>
                 </div>
@@ -96,7 +98,7 @@
                     </div>
                 </div>
                 <div class="row my-2 mt-4">
-                    <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle shadow">
+                    <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle item-section-home shadow">
                         <h6 class="pt-2">Uso para múltiples usuarios</h6>
                     </div>
                 </div>
@@ -109,12 +111,34 @@
                     </div>
                 </div>
                 <div class="row mt-4">
-                    <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle shadow">
+                    <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle item-section-home shadow">
                         <h6 class="pt-2">Totalmente configurable</h6>
                     </div>
                 </div>
             </div>
 
+        </div>
+    </div>
+
+    <div class="container-blank g-0 rounded"></div>
+
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <p class="text-color fw-bolder rounded"><i class="bi bi-info-circle-fill"></i> Acerca de nosotros</p>
+        </div>
+    </div>
+
+    <div class="row justify-content-center mb-2">
+        <div class="col">
+            <hr class="line">
+        </div>
+        <div class="col-auto text-center g-0">
+            <a routerLink="" class="btn btn-sm btn-color text-light rounded-circle pulse py-1 mt-2">
+                <i class="bi bi-caret-down-fill"></i>
+            </a>
+        </div>
+        <div class="col">
+            <hr class="line">
         </div>
     </div>
 
