--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,17 @@
 <p>register works!</p>
+
+<div class="container">
+    <div class="row">
+<form action="">
+
+    <div class="form-group xs">
+        <label for="inputName">Nombre</label>
+        <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Introduce el nombre">
+    </div>
+    <div class="form-group">
+        <label for="inputLastName">Apellido</label>
+        <input type="text" class="form-control" id="lastName" placeholder="Introduce tus pellidos">
+    </div>
+</form>
+</div>
+</div>
