--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,17 +1,49 @@
-<p>register works!</p>
 
-<div class="container">
-    <div class="row">
-<form action="">
+    <div class="backgroundRegister  "> 
+        
+<div class="row">
+    
+    <div class="col"></div>
+    
+</div>
+<h3 class="registerTittle h3 ">REGISTRO</h3>
+        <div class="row containerRegister">
+            <div class="row-fluid pt-5 justify-content-center ">
+       
+                <div class="col-6  rounded-3 bg-registro ">
+                  
+                <div class="row justify-content-center" id="registro">
+                    <div class="col-5">
+                        <label for="inputName"></label>
+                        <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Nombre">
+                        <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+                    </div> 
+                   
+                </div>
+                <div class="row justify-content-center ">
+                    <div class="col-5">
+                        <label for="inpuLastName"></label>
+                        <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Apellido">
+                   
+                    </div> 
+                </div>
+                <div class="row justify-content-center pb-4">
+                    <div class="col-5">
+                        <label for="inputNick"></label>
+                        <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Apodo">
+                   
+                    </div> 
+                </div>    
 
-    <div class="form-group xs">
-        <label for="inputName">Nombre</label>
-        <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Introduce el nombre">
-    </div>
-    <div class="form-group">
-        <label for="inputLastName">Apellido</label>
-        <input type="text" class="form-control" id="lastName" placeholder="Introduce tus pellidos">
-    </div>
-</form>
+                <div class="row justify-content-center">
+                    <div class="col-6">
+    <a href="#">
+        <img src="../../assets/insinia.png" class="img-fluid float logo" ></a> </div>
+    <div class="container-fluid  ">
+    </div> 
+</div>    
+
 </div>
 </div>
+</div>
+
