--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -29,12 +29,18 @@ background: linear-gradient(180deg, rgba(82,6,214,1) 0%, rgba(109,48,243,1) 32%,
       top: 30%;
   }
 .containerRegister{
-    margin-top: 40vh;
+   padding-top: 20%;
     /* padding-top: 30%; */
-
-
 }
 
+.form{
+  text-align: center;
+}
+/* 
+.form2{
+    position: absolute;
+    text-align: center;
+  } */
 
 .next{
     position:absolute;
@@ -58,6 +64,12 @@ background: linear-gradient(180deg, rgba(82,6,214,1) 0%, rgba(109,48,243,1) 32%,
 
 .logo:hover{
     transform: scale(1.1);
+}
+
+.inputsRegister{
+    max-width: 15em;
+    min-width: 10em !important;
+   
 }
 /* 
 .bg-registro{
