--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,49 +1,135 @@
 
     <div class="backgroundRegister  "> 
-        
-<div class="row">
-    
-    <div class="col"></div>
-    
-</div>
-<h3 class="registerTittle h3 ">REGISTRO</h3>
-        <div class="row containerRegister">
-            <div class="row-fluid pt-5 justify-content-center ">
+    <div class="comtainer containerRegister">
+        <div class="row">
+            <div class="col-1"></div>
+             <div class="col-5 imgContainer">
+            <a href="#">
+                <img src="../../assets/insinia.png" class="img-fluid float logo" ></a> </div>
+         
+<!-- <div class="col-1"></div> -->
+            <div class="col-5 pt-3 form"  style="display: none;">
+                           
+                        <div class="col-12  rounded-3 bg-registro ">
+                          
+                        <div class="row justify-content-center" id="registro">
+                            <div class="col-5 inputsRegister">
+                                <label for="inputName"></label>
+                                <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Nombre">
+<!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+ -->                            </div> 
+                           
+                        </div>
+                        <div class="row justify-content-center ">
+                            <div class="col-5 inputsRegister">
+                                <label for="inpuLastName"></label>
+                                <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Apellido">
+                           
+                            </div> 
+                        </div>
+                        <div class="row justify-content-center pb-4">
+                            <div class="col-5 inputsRegister">
+                                <label for="inputNick"></label>
+                                <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Apodo">
+                           
+                            </div> 
+                            
+                        </div>
+                        <div class="row justify-content-center pb-4">
+                            <div class="col-5 inputsRegister">
+                                <label for="inputNick"></label>
+                                <button type="submit" class="btn btn-primary" id="name" aria-describedby="name" placeholder="Apodo">Siguiente</button>
+                           
+                            </div> 
+                            
+                        </div>
+                        
+            </div>
        
-                <div class="col-6  rounded-3 bg-registro ">
+
+                </div>   
+            
+                <div class="col-5 pt-3 form" style="display: none;">
+                           
+                    <div class="col-12  rounded-3 bg-registro ">
+                      
+                    <div class="row justify-content-center" id="registro">
+                        <div class="col-5 inputsRegister">
+                            <label for="inputName"></label>
+                            <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Correo">
+<!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+-->                            </div> 
+                       
+                    </div>
+                    <div class="row justify-content-center ">
+                        <div class="col-5 inputsRegister">
+                            <label for="inpuLastName"></label>
+                            <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Contraseña">
+                       
+                        </div> 
+                    </div>
+                    <div class="row justify-content-center pb-4">
+                        <div class="col-5 inputsRegister">
+                            <label for="inputNick"></label>
+                            <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Repite la contraseña">
+                       
+                        </div> 
+                        
+                    </div>
+                    <div class="row justify-content-center pb-4">
+                        <div class="col-5 inputsRegister">
+                            <label for="inputNick"></label>
+                            <button type="submit" class="btn btn-primary" id="name" aria-describedby="name" placeholder="Apodo">Siguiente</button>
+                       
+                        </div> 
+                        
+                    </div>
+                    
+        </div>
+   
+        
+            </div>
+        
+            <div class="col-5 pt-3 form">
+                           
+                <div class="col-12  rounded-3 bg-registro ">
                   
                 <div class="row justify-content-center" id="registro">
-                    <div class="col-5">
+                    <div class="col-5 inputsRegister">
                         <label for="inputName"></label>
-                        <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Nombre">
-                        <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
-                    </div> 
+                        <input type="date" class="form-control " id="name" aria-describedby="name" placeholder="Fecha de nacimiento">
+<!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+-->                            </div> 
                    
                 </div>
+               
                 <div class="row justify-content-center ">
-                    <div class="col-5">
+                    <div class="col-5 inputsRegister">
                         <label for="inpuLastName"></label>
-                        <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Apellido">
+                        <textarea name="" id="" class="form-control"  ></textarea>
                    
                     </div> 
                 </div>
                 <div class="row justify-content-center pb-4">
-                    <div class="col-5">
+                  
+                    
+                </div>
+                <div class="row justify-content-center pb-4">
+                    <div class="col-5 inputsRegister">
                         <label for="inputNick"></label>
-                        <input type="text" class="form-control " id="name" aria-describedby="name" placeholder="Apodo">
+                        <button type="submit" class="btn btn-primary" id="name" aria-describedby="name" placeholder="Apodo">Siguiente</button>
                    
                     </div> 
-                </div>    
+                    
+                </div>
+                
+    </div>
 
-                <div class="row justify-content-center">
-                    <div class="col-6">
-    <a href="#">
-        <img src="../../assets/insinia.png" class="img-fluid float logo" ></a> </div>
-    <div class="container-fluid  ">
-    </div> 
-</div>    
+    
+        </div>
+        </div>
+        
+        </div>
 
-</div>
-</div>
-</div>
-
+            </div>
+            
