--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="row bg-color pt-1"></div>
 
     <div class="row mt-5 justify-content-center gap-1">
-        <div class="col-8 rounded">
+        <div class="col-4 rounded">
             <div class="col-auto p-0">
                 <h4 class="text-color fw-bolder pt-2">Bienvenido a Insinia</h4>
                 <h5 class="text-color">La herramienta definitiva para crear, organizar y manejar rankings.</h5>
@@ -11,69 +11,111 @@
                 <h5 class="text-color"></h5>
                 <div class="row">
                     <div class="col-auto">
-                        <button class="btn btn-lg btn-color text-light fw-bolder" routerLink="/register">¿Comenzamos?</button>
+                        <button class="btn btn-color text-light fw-bolder" routerLink="/register">¿Comenzamos?</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <div class="col-lg text-center">
                 <img src="../../assets/insinia-shadow.png" class="img-fluid home-logo float">
             </div>
         </div>
     </div>
 
-    <div class="row justify-content-center my-5" id="getStarted">
+    <div class="row">
+        <div class="col">
+            <hr class="line">
+        </div>
+    </div>
 
-        <div class="col-3 text-start">
-            <img src="../../assets/list-template-one.png" class="img-fluid float">
+    <div class="row bg-color-home-inverted pb-5 mt-2 mx-auto rounded">
+
+        <div class="row justify-content-center">
+            <div class="col-10 text-center text-color py-2 mb-3">
+                <h5>
+                    ¡Empezamos!
+                </h5>
+                <h6>
+                    Ahora es el momento, puedes crearte tu cuenta o acceder a ella si ya has creado una.
+                </h6>
+            </div>
         </div>
 
-        <div class="col-8 col-lg-8 bg-color rounded text-light text-center">
-            <div class="row"><h3 class="fw-lighter mt-3">¡Empezamos!</h3></div>
-            <div class="row justify-content-center text-center mt-3">
-                <div class="col">
-                    <h3><i class="bi bi-person-square link-white-to-color"></i></h3>
+        <div class="row justify-content-center">
+            <div class="col-4 col-lg-4 bg-color rounded text-light text-center">
+                <div class="row">
+                    <p class="fw-lighter mt-3 p-0 m-0"><i class="bi bi-person-plus-fill"></i> ¿No tienes una cuenta?</p>
                 </div>
-                <div class="col-2">
-                    <h3><i class="bi bi-star-fill link-white-to-color"></i></h3>
+    
+                <div class="row">
+                    <div class="col p-0 g-0-">
+                        <hr class="line border-light my-2">
+                    </div>
                 </div>
-                <div class="col">
-                    <h3><i class="bi bi-list-stars link-white-to-color"></i></h3>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <hr class="line border-light">
-                </div>
-            </div>
-
-            <div class="row mt-2 text-light">
-                <h5 class="px-2">
-                    Puedes crear una cuenta o iniciar sesión si ya tienes una.
-                </h5>
-            </div>
-
-            <div class="row position-relative mt-5">
-                <div>
-                    <button class="position-absolute top-100 start-25 translate-middle bg-light btn btn-outline-color-alt shadow" routerLink="/login">¡Iniciar sesión!</button>
-                </div>
-                <div>
-                    <button class="position-absolute top-100 start-75 translate-middle bg-light btn btn-outline-color-alt shadow" routerLink="/register">¡Registrate!</button>
+    
+                <div class="row text-light">
+                    <ul class="text-start">
+                        <li class="list-group-item">
+                            <p class="p-0 m-0"><i class="bi bi-check-lg"></i> Sin publicidad.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <p class="p-0 m-0"><i class="bi bi-check-lg"></i> Sin limitaciones de uso.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <p class="p-0 m-0"><i class="bi bi-check-lg"></i> Poder utilizar el panel de control.</p>
+                        </li>
+                        <div class="row mx-2 mt-2">
+                            <button class="col bg-light btn btn-outline-color border-light shadow" routerLink="/register">¡Registrate!</button>
+                        </div>
+                    </ul>
                 </div>
             </div>
             
+            <div class="col-2 d-flex text-center">
+            </div>
+    
+            <div class="col-4 col-lg-4">
+                <div class="row">
+                    <div class="col bg-color rounded text-light text-center">
+                        
+                        <div class="row">
+                            <p class="fw-lighter mt-3 p-0 m-0"><i class="bi bi-person-square"></i> ¿Ya tienes una cuenta?</p>
+                            <div class="col p-0 g-0">
+                                <hr class="line border-light my-1">
+                            </div>
+                        </div>
+        
+                        <div class="row text-light">
+                            <ul class="text-start">
+                                <li class="list-group-item">
+                                    <p class="p-0 m-0"><i class="bi bi-check-lg"></i> Vuelve a cargar tu progreso.</p>
+                                </li>
+                                <li class="list-group-item">
+                                    <p class="p-0 m-0"><i class="bi bi-check-lg"></i> Edita y configura tu perfil.</p>
+                                </li>
+                                <li class="list-group-item">
+                                    <p class="p-0 m-0"><i class="bi bi-check-lg"></i> Crea nuevos rankings.</p>
+                                </li>
+                                <div class="row mx-2 mt-3">
+                                    <button class="col bg-light btn btn-outline-color border-light shadow" routerLink="/login">¡Inicia sesión!</button>
+                                </div>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    
-    <div class="container-fluid bg-color-home-0 rounded">
+
+    <div class="mt-3 bg-color-home-0 rounded">
+
         <div class="row text-center py-3">
             <h3 class="text-light"><i class="bi bi-award"></i> Características</h3>
         </div>
 
-        <div class="row text-center py-3">
-            <h5 class="text-light">Totalmente eficiente, diseñada para la intuitividad y pensada para el ambito escolar.</h5>
+        <div class="row text-center py-2">
+            <h5 class="text-light">Totalmente eficiente, diseñada para la intuitividad y pensada para el ámbito escolar.</h5>
         </div>
 
         <div class="row justify-content-center text-light m-2 gap-3">
@@ -83,6 +125,9 @@
                     <div class="col">
                         <img src="../../assets/stats.png" class="text-center img-fluid img-sections">
                     </div>
+                </div>
+                <div class="row">
+                    <p>Ofrecemos estadísticas de uso, rendimiento y <br> más caracteristicas.</p>
                 </div>
                 <div class="row mt-4">
                     <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle item-section-home shadow">
@@ -97,6 +142,9 @@
                         <img src="../../assets/users.png" class="text-center img-fluid img-sections">
                     </div>
                 </div>
+                <div class="row">
+                    <p>Preparado por completo para usuarios individuales y grupales.</p>
+                </div>
                 <div class="row my-2 mt-4">
                     <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle item-section-home shadow">
                         <h6 class="pt-2">Uso para múltiples usuarios</h6>
@@ -110,38 +158,59 @@
                         <img src="../../assets/gear.png" class="text-center img-fluid img-sections">
                     </div>
                 </div>
+                <div class="row">
+                    <p>Los estilos, los datos y otros parámetros son totalmente configurables.</p>
+                </div>
                 <div class="row mt-4">
                     <div class="bg-light p-0 rounded text-color position-absolute top-100 start-50 translate-middle item-section-home shadow">
                         <h6 class="pt-2">Totalmente configurable</h6>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
     <div class="container-blank g-0 rounded"></div>
 
-    <div class="row justify-content-center">
-        <div class="col-auto">
-            <p class="text-color fw-bolder rounded"><i class="bi bi-info-circle-fill"></i> Acerca de nosotros</p>
+    <div class="row justify-content-center mt-5">
+        <div class="col-4 col-lg-4">
+            <div class="row text-center">
+                <h5 class="text-color">Para desarrolladores</h5>
+            </div>
+            <div class="row justify-content-center">
+                <h3 class="text-center text-color">
+                    <i class="bi bi-code-slash"></i>
+                </h3>
+            </div>
+        </div>
+
+        <div class="col-4 col-lg-4">
+            <div class="row text-center">
+                <h5 class="text-color">Fácil de utilizar</h5>
+            </div>
+            <div class="row justify-content-center">
+                <h3 class="text-center text-color">
+                    <i class="bi bi-pencil"></i>
+                </h3>
+            </div>
+        </div>
+
+        <div class="col-4 col-lg-4">
+            <div class="row text-center">
+                <h5 class="text-color">Documentación completa</h5>
+            </div>
+            <div class="row justify-content-center">
+                <h3 class="text-center text-color">
+                    <i class="bi bi-book"></i>
+                </h3>
+            </div>
         </div>
     </div>
-
     <div class="row justify-content-center mb-2">
         <div class="col">
             <hr class="line">
         </div>
-        <div class="col-auto text-center g-0">
-            <a routerLink="" class="btn btn-sm btn-color text-light rounded-circle pulse py-1 mt-2">
-                <i class="bi bi-caret-down-fill"></i>
-            </a>
-        </div>
-        <div class="col">
-            <hr class="line">
-        </div>
     </div>
-
 </div>
 
 
