--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -44,6 +44,10 @@
     transition: 1s;
 }
 
+.asset-item {
+    width: 200px;
+}
+
 .list-group-item {
     background-color: transparent;
     border: 0;
