--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,9 +31,9 @@
 
     <div class="row bg-color-home-inverted pb-5 mt-2 mx-auto rounded">
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" id="landing-home">
             <div class="col-10 text-center text-color py-2 mb-3">
-                <h5>
+                <h5 class="fw-bolder">
                     ¡Empezamos!
                 </h5>
                 <h6>
